FIND_PACKAGE(Protobuf REQUIRED)
FILE(GLOB protofiles "${CMAKE_CURRENT_SOURCE_DIR}/*.proto")
MESSAGE(STATUS ${protofiles})
PROTOBUF_GENERATE_CPP(PROTOSRCS PROTOHDRS ${protofiles})
message(STATUS ${PROTOSRCS})
ADD_LIBRARY(proto STATIC ${PROTOSRCS} ${PROTOHDRS})
TARGET_LINK_LIBRARIES(proto protobuf)
TARGET_INCLUDE_DIRECTORIES(proto PUBLIC ${CMAKE_CURRENT_BINARY_DIR})
